--- a/rules/sns.yaml
+++ b/rules/sns.yaml
@@ -18,4 +18,5 @@ spec:
       expr: aws_cloudwatch_SNS_NumberOfNotificationsFailed_TopicName > 0
       for: 30m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: warning
