--- a/rules/acm.yaml
+++ b/rules/acm.yaml
@@ -18,6 +18,7 @@ spec:
       expr: aws_cloudwatch_CertificateManager_DaysToExpiry_CertificateArn{acm_in_use!="0"} < 7
       for: 30m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: warning
         asy_itsm_severity: medium
     - alert: AwsCloudwatchAcmCertificateExpirationCritical
@@ -28,5 +29,6 @@ spec:
       expr: aws_cloudwatch_CertificateManager_DaysToExpiry_CertificateArn{acm_in_use!="0"} <= 1
       for: 15m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: critical
         asy_itsm_severity: high
