--- a/rules/asg.yaml
+++ b/rules/asg.yaml
@@ -18,6 +18,7 @@ spec:
       expr: aws_cloudwatch_AutoScaling_GroupDesiredCapacity_AutoScalingGroupName_max == aws_cloudwatch_AutoScaling_GroupMaxSize_AutoScalingGroupName_max and aws_cloudwatch_AutoScaling_GroupMaxSize_AutoScalingGroupName_max > 2
       for: 30m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: warning
     - alert: AwsCloudwatchAutoScalingZeroInServiceHosts
       annotations:
@@ -27,6 +28,7 @@ spec:
       expr: aws_cloudwatch_AutoScaling_GroupInServiceInstances_AutoScalingGroupName == 0 and aws_cloudwatch_AutoScaling_GroupDesiredCapacity_AutoScalingGroupName > 0
       for: 15m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: critical
         asy_itsm_severity: high
     - alert: AwsCloudwatchAutoScalingRatioInServiceHosts
@@ -37,5 +39,6 @@ spec:
       expr: round(aws_cloudwatch_AutoScaling_GroupInServiceInstances_AutoScalingGroupName / aws_cloudwatch_AutoScaling_GroupTotalInstances_AutoScalingGroupName * 100 ) < 50
       for: 30m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: critical
 # TODO: lambda sensu saas check too many terminated instances after each other?
