--- a/rules/efs.yaml
+++ b/rules/efs.yaml
@@ -18,6 +18,7 @@ spec:
       expr: round(aws_cloudwatch_EFS_BurstCreditBalance_FileSystemId) < 100
       for: 15m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: critical
         asy_itsm_severity: high
     - alert: AwsCloudwatchEFSBurstCreditBalancePrediction
@@ -26,6 +27,7 @@ spec:
         description: EFS burst credit balance will be at {{$value}} for volume {{ $labels.dimension_FileSystemId }} in customer {{ $labels.overwrite_asy_customer }} account {{ $labels.overwrite_aws_account_id }} region {{ $labels.overwrite_aws_region }}
         runbook_url: https://docs.aws.amazon.com/efs/latest/ug/troubleshooting.html
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: warning
       expr: round(predict_linear(aws_cloudwatch_EFS_BurstCreditBalance_FileSystemId{ec2_credits_mode!="unlimited"}[30m], 3600 * 2)) < 10
       for: 30m
@@ -37,4 +39,5 @@ spec:
       expr: round(aws_cloudwatch_EFS_PercentIOLimit_FileSystemId) > 90
       for: 15m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: warning
