--- a/rules/lambda.yaml
+++ b/rules/lambda.yaml
@@ -18,6 +18,7 @@ spec:
       expr: round(rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m]) / (rate(aws_cloudwatch_Lambda_Invocations_FunctionName_sum[15m]) + rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m])) * 100) > 5
       for: 30m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: warning
     - alert: AwsCloudwatchLambdaErrorRateCritical
       annotations:
@@ -27,6 +28,7 @@ spec:
       expr: round(rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m]) / (rate(aws_cloudwatch_Lambda_Invocations_FunctionName_sum[15m]) + rate(aws_cloudwatch_Lambda_Errors_FunctionName_sum[15m])) * 100) > 15
       for: 15m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: critical
     - alert: AwsCloudwatchLambdaThrottles
       annotations:
@@ -36,6 +38,7 @@ spec:
       expr: aws_cloudwatch_Lambda_Throttles_FunctionName > 0
       for: 15m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: critical
     - alert: AwsCloudwatchLambdaTimeout
       annotations:
@@ -45,6 +48,7 @@ spec:
       expr: aws_cloudwatch_Lambda_Duration_FunctionName / 1000 > 900
       for: 15m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: critical
 
 
