--- a/rules/natgw.yaml
+++ b/rules/natgw.yaml
@@ -19,6 +19,7 @@ spec:
       expr: aws_cloudwatch_NATGateway_PacketsDropCount_NatGatewayId > 10
       for: 15m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: warning
     - alert: AwsCloudwatchNATGatewayErrorPortAllocation
       annotations:
@@ -28,4 +29,5 @@ spec:
       expr: aws_cloudwatch_NATGateway_ErrorPortAllocation_NatGatewayId > 1
       for: 15m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: warning
