--- a/rules/route53.yaml
+++ b/rules/route53.yaml
@@ -18,6 +18,7 @@ spec:
       expr: aws_cloudwatch_Route53_HealthCheckPercentageHealthy_HealthCheckId{r53_disabled="false"} < 20
       for: 20m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: critical
         asy_itsm_severity: high
     - alert: AwsCloudwatchRoute53HealthCheckPercentageWarning
@@ -28,4 +29,5 @@ spec:
       expr: aws_cloudwatch_Route53_HealthCheckPercentageHealthy_HealthCheckId{r53_disabled="false"} < 50
       for: 10m
       labels:
+        rule_source: opswatch-prometheus-rules
         severity: warning
